# otap-signup-validator

./: .gitignore  Cargo.toml  Makefile  README.md  README.phase0.md  pytest.ini  stage_chronos
bench/: bench_geometric.py
benches/: validator_bench.rs
compiler/: bitstream_compiler.py  mrr_calibration_generator.py
config/: registry_extensions.yaml
crates/luxstream-otap-d3/: Cargo.toml
crates/luxstream-otap-d3/src/: handshake.rs  key_domain.rs  lib.rs  replay_cache.rs  rpc.rs  session.rs  transport.rs
crates/otap-bench/: Cargo.toml
crates/otap-bench/benches/: ring_latency.rs
crates/otap-bench/src/: adaptive.rs  batch.rs  bench.rs  lib.rs  mpmc.rs  ringbuf.rs
crates/otap-bench/tests/: test_adaptive.rs  test_batch.rs  test_mpmc.rs  test_ringbuf.rs
crates/otap-cli/: Cargo.toml
crates/otap-cli/src/: main.rs
crates/otap-codec/: Cargo.toml
crates/otap-codec/src/: lib.rs
crates/otap-core/: Cargo.toml
crates/otap-core/src/: dimensions.rs  error.rs  lib.rs  transient.rs
crates/otap-crypto/: Cargo.toml
crates/otap-crypto/benches/: bench_derive.rs
crates/otap-crypto/src/: lib.rs
crates/otap-csr/: Cargo.toml
crates/otap-csr/src/: lib.rs
crates/otap-fabric/: Cargo.toml
crates/otap-fabric/src/: lib.rs
crates/otap-flr-client/: Cargo.toml
crates/otap-flr-client/src/: lib.rs
crates/otap-flr-client/tests/: golden_vectors.rs  golden_vectors_http.rs  mock_flr.rs
crates/otap-luxcode/: Cargo.toml
crates/otap-luxcode/src/: bitsliced.rs  codebook.rs  gf1024.rs  lib.rs
crates/otap-modq/: Cargo.toml  README.md
crates/otap-modq/benches/: ring_throughput.rs
crates/otap-modq/src/: bar.rs  lib.rs  ring.rs
crates/otap-obg/: Cargo.toml
crates/otap-obg/src/: lib.rs  modq_backend.rs
crates/otap-schema/: Cargo.toml
crates/otap-schema/src/: equity_order.rs  heartbeat.rs  lib.rs  market_tick.rs
crates/otap-sim/: Cargo.toml
crates/otap-sim/src/: lib.rs
deployment/ansible/roles/cxl_optics/tasks/: main.yml
deployment/ansible/roles/mrr_calibration/tasks/: main.yml
deployment/scripts/: provision.sh
docs/: BENCHMARK_RESULTS.md  NPM_CAPACITY_SIMULATION.md  OTAP_Full_Photon_Hilbert_Space.md  OTAP_Geometric_SubEncoding.md  OTAP_NeXt_Architecture.md  OTAP_QTX_Quantum_Transmitter.md  OTAP_SiSE_Silicon_Substrate_Encoding.md  OTAP_TB_Roadmap.md  SPEC_quantum_tx.md  architecture.md  golden_vectors.md
flr/: .gitignore  API.md  DESIGN.md  Dockerfile  Makefile  README.md  TESTING.md  config.yaml.example  docker-compose.yml  go.mod  go.sum
flr/cmd/flr-seed/: main.go
flr/cmd/flrd/: main.go
flr/internal/api/: interceptor.go  rest.go  schema_rest.go  server.go
flr/internal/audit/: auditor.go  auditor_test.go  compliance.go  compliance_test.go
flr/internal/bitweave/: adapter.go  bitweave.go  bitweave_avx512.go  bitweave_avx512_stubs.go  bitweave_buffered.go  bitweave_noavx512.go  bitweave_test.go  conflict_pool.go  conflict_pool_test.go  generate.go
flr/internal/bitweave/avo/: gen.go  go.mod
flr/internal/config/: config.go
flr/internal/crypto/: engine.go  engine_test.go  golden_vectors_test.go  schema.go  schema_test.go  signbytes.go
flr/internal/federation/: client.go  client_test.go  conflict.go  gossip.go  manager.go  manager_test.go
flr/internal/models/: models.go  schema.go  schema_test.go
flr/internal/registry/: badger_store.go  badger_store_test.go  engine.go  engine_test.go  schema_engine.go  schema_engine_test.go  schema_store.go  store.go
flr/internal/xlat/: manager.go  manager_test.go
flr/test/: helper.go
flr/test/fixtures/: leases.json  operators.json
flr/test/integration/: federation_sync_test.go  lease_lifecycle_test.go  merkle_test.go
otap/: README.md
otap/go/: go.mod
otap/go/ffi/: otap.go
otap/rust/: Cargo.toml
otap/rust/d3/: Cargo.toml
otap/rust/d3/benches/: crypto_perf.rs
otap/rust/d3/src/: lib.rs
otap/rust/integration/: Cargo.toml
otap/rust/integration/src/: lib.rs
otap/rust/integration/tests/: full_pipeline.rs
otap/rust/modq/: Cargo.toml
otap/rust/modq/src/: lib.rs
otap/scripts/: bench-all.sh  test-all.sh
research/: constellation_geometry.md  fiber_capacity.md  photon_geometry.md
rtl/: README.md  otap_csr_block.sv  otap_csr_map.svh  otap_rob_bitweave.v
src/: cxl.rs  ffi.rs  main.rs  pcie.rs  pfcp.rs  photonforge.rs  telemetry.rs  validator.rs
stage-chronos/: __init__.py  bench.py  coherence.py  drift.py  encoder.py  fiber_channel.py  geometric_encoding.py  holographic.py  integration.py  layered.py  npm_capacity_sim.py  pdl_sweep.py  qtx_package.py  spacetime.py  test_qtx_package.py  test_stage_chronos.py  transport.py
zig/: README.md  build.zig  gf1024.zig  luxcode.zig
zig/src/: mmio.zig
