[package]
name = "terabit_fabric"
version = "2.0.0"
edition = "2021"

[dependencies]
validator = { version = "0.18", features = ["derive"] }
crossbeam-utils = "0.8"
libc = "0.2"
cudarc = { version = "0.14", features = ["cuda", "multi-device"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "validator_bench"
harness = false
