[package]
name = "luxstream-otap-d3"
version = "0.1.0"
edition = "2021"
description = "OTAP/D3 Topological Auth — session establishment + frame authentication"
license = "Proprietary"

[lib]
path = "src/lib.rs"

[features]
default = []
transport = ["dep:tokio"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
thiserror = "1.0"

# Transport (optional — only needed for TCP handshake)
tokio = { version = "1.35", features = ["net", "io-util", "rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["net", "io-util", "rt-multi-thread", "macros"] }
