[package]
name = "otap-bench"
version = "0.1.0"
edition = "2021"
description = "Corrected benchmark harness: lock-free SPSC ring, batch ops, adaptive backpressure, MPMC work-stealing. Fixes the 160× latency measurement artifact in the original OTAP benchmark."
license = "MIT"

[dependencies]
hdrhistogram = "7"
crossbeam-utils = "0.8"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "full_bench"
path = "src/bin/full_bench.rs"

[[bench]]
name = "ring_latency"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
