[package]
name = "otap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "otap-demo"
path = "src/main.rs"

[[bin]]
name = "otap-fullstack"
path = "src/bin/otap-fullstack.rs"

[[bin]]
name = "otap-local"
path = "src/bin/otap-local.rs"

[[bin]]
name = "otap-modq-loopback"
path = "src/bin/otap-modq-loopback.rs"

[dependencies]
otap-core.workspace = true
otap-crypto.workspace = true
otap-schema.workspace = true
otap-codec.workspace = true
otap-sim.workspace = true
otap-csr.workspace = true
otap-obg.workspace = true
otap-fabric.workspace = true
otap-flr-client.workspace = true
otap-modq.workspace = true
anyhow.workspace = true
libc.workspace = true
