[package]
name = "otap-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otap-core.workspace = true
hmac.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "bench_derive"
harness = false
