[package]
name = "otap-flr-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otap-core.workspace = true
otap-schema.workspace = true
otap-csr.workspace = true
otap-obg.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
hex.workspace = true
otap-core.workspace = true
otap-csr.workspace = true
otap-schema.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
